本地測試修改標題

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="小兔鮮兒官網，致力于打造全球最大的食品，生鮮店商購物平台。">
     <!-- meta:kw -->
     <meta name="keywords" content="小兔鮮兒，食品，生鮮，服裝，家電，電商，購物">
-    <title>小兔鮮兒-新鮮 惠民 快捷!</title>
+    <title>小兔鮮兒-新鮮 惠民 快捷!測試修改</title>
     <!-- link:favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- iconfont -->
